added all cart related endpoints and requests, TODO: test said routes in postman, TODO: create the order related endpoints to let users see their orders
